[project]
name = "dmq"
version = "0.0.3"
description = "python-native [d]istributed [m]essage [q]ueue"
authors = [
    { email = "alexey@plassstic.tech", name = "pyrorhythm" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "ulid>=1.1",
    "msgspec>=0.18.0",
    "ormsgpack>=1.5.0"
]

[project.optional-dependencies]

#orjson = ["orjson>=3.10.0"]
redis = ["redis>=7"]
postgres = ["asyncpg>=0.30.0"]
all-ft = ["ormsgpack>=1.5.0", "asyncpg>=0.30.0"]

[project.scripts]
dmq = "dmq.cli:cli"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyrefly>=0.45.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.9",
    "testcontainers[redis,postgres]>=4.8.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py314"
src = ["src"]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true
line-ending = "lf"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "ANN",
    "ASYNC",
    "S",
    "B",
    "A",
    "C4",
    "G",
    "PIE",
    "Q",
    "SIM",
    "ARG",
    "PTH",
    "TD",
    "PL",
    "PERF"
]
ignore = ["PERF401"]

[tool.ruff.lint.isort]
known-first-party = [
    "common",
    "db",
    "libs",
    "handlers",
    "backend_common",
    "actions"
]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "pydantic.root_validator",
    "pydantic.validator",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]
"**/{tests}/*" = ["S101", "PLR2004"]
"**/{tests}/*/test_*" = ["ANN201"]

[tool.ruff.lint.pylint]
max-args = 9

[tool.pyrefly]
python_version = "3.14.2"

search-path = ["src"]
project-includes = ["src"]
project-excludes = ["**/.[!/.]*", "**/tests"]
site-package-path = [".venv/lib/python3.14t/site-packages", ".venv/lib/python3.14/site-packages", ".venv/lib/python3.13/site-packages", ".venv/lib/python3.13t/site-packages"]
python-interpreter-path = ".venv/bin/python"
untyped-def-behavior = "check-and-infer-return-any"
ignore-errors-in-generated-code = true
disable-search-path-heuristics = true

[tool.pyrefly.errors]
bad-assignment = false
invalid-argument = false
