[project]
name = "dmq"
version = "0.1.1"
description = "python-native distributed message queue"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "pyrorhythm", email = "alexey@plassstic.tech" }]
dependencies = [
  "croniter>=2.0",
  "loguru>=0.7.3",
  "msgspec>=0.18.0",
  "ormsgpack>=1.5.0",
  "ulid>=1.1"
]

[project.scripts]
dmq = "dmq.cli:cli"

[project.optional-dependencies]
all = ["redis>=7", "asyncpg>=0.30.0"]
postgres = ["asyncpg>=0.30.0"]
redis = ["redis>=7"]


[dependency-groups]
dev = [
  "aiohttp>=3.13.2",
  "dmq[all]",
  "pyrefly>=0.45.2",
  "pytest>=9.0.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.14.9",
  "testcontainers[redis,postgres]>=4.8.0",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.pyrefly]
python_version = "3.14.2"
search-path = ["src"]
project-includes = ["src"]
project-excludes = ["**/.[!/.]*", "**/tests"]
site-package-path = [
  ".venv/lib/python3.14t/site-packages",
  ".venv/lib/python3.14/site-packages",
  ".venv/lib/python3.13/site-packages",
  ".venv/lib/python3.13t/site-packages"
]
python-interpreter-path = ".venv/bin/python"
untyped-def-behavior = "check-and-infer-return-any"
ignore-errors-in-generated-code = true
disable-search-path-heuristics = true

[tool.pyrefly.errors]
bad-assignment = false
invalid-argument = false

[tool.ruff]
line-length = 120
target-version = "py314"
src = ["src"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
indent-style = "tab"

[tool.ruff.lint]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "ANN",
    "ASYNC",
    "S",
    "B",
    "A",
    "C4",
    "G",
    "PIE",
    "Q",
    "SIM",
    "ARG",
    "PTH",
    "TD",
    "PL",
    "PERF"
]
ignore = [
    "PERF401",
    "B008",
    "A002",
    "ARG001",
    "ARG002",
    "ANN003",
    "ANN001",
    "ANN002",
    "ANN401",
    "TD002",
    "TD003",
    "TD004",
    "TD005",
    "PLR0913",
    "PLR0912",
    "PLR0915",
    "PLR2004",
    "PLR6301"
]

[tool.ruff.lint.isort]
known-first-party = [
    "common",
    "db",
    "libs",
    "handlers",
    "backend_common",
    "actions"
]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "pydantic.root_validator",
    "pydantic.validator",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]
"**/{tests}/*" = ["S101", "PLR2004", "ANN201", "ANN001"]
"**/{tests}/*/test_*" = ["ANN201"]

[tool.ruff.lint.pylint]
max-args = 9

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["dmq"]

[tool.coverage.report]
show_missing = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.sources]
dmq = { workspace = true }
